--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 * {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
-  color: white;
+  color: black;
 }
 
 body {
   
   font-family: Arial, Helvetica, sans-serif;
+  background-color:cornflowerblue;
 }
 
 /* Style the top navigation bar */
@@ -15,7 +16,8 @@ body {
   margin: 20px;
   overflow: hidden;
   background-color: #333;
-  font-size: 50px
+  font-size: 50px;
+  color: white;
 }
 
 
@@ -56,7 +58,7 @@ body {
 }
 
 button {
-    background-color:cornflowerblue;
+    background-color:black;
     border: none;
     color: white;
     padding: 70px 40px;
