--- a/style.css
+++ b/style.css
@@ -12,12 +12,17 @@ body {
 
 /* Style the top navigation bar */
 .topnav {
-  padding: 20px;
+  padding: 40px;
   margin: 20px;
   overflow: hidden;
-  background-color: #333;
+  background-color: white;
   font-size: 50px;
-  color: white;
+  color: black;
+  background-position:  95% 10%;
+  background-repeat: no-repeat;  
+  background-image: url("images/logo.svg");
+  font-weight: bold;
+  box-shadow: 5px 10px 18px #888888;
 }
 
 
@@ -27,6 +32,7 @@ body {
   padding: 20px;
   margin: 20px;  
   background-color: #ddd;
+  box-shadow: 5px 10px 18px #888888;
 
 }
 
@@ -40,36 +46,41 @@ body {
 
 .infoBox {
   padding: 20px;
+  padding-left: 150px;
   margin: 20px;  
   background-color: #f1f1f1;
-  padding: 10px;
+  font-weight: bold;
+  box-shadow: 5px 10px 18px #888888;
+  
 }
 
 .green {
-    background-color: green;
+  
+  
+  background-color: green;
+  background-position: left, right;
+  background-repeat: no-repeat, no-repeat;  
+  background-image: url("images/info-black-48dp/2x/baseline_info_black_48dp.png"),
+  url("images/thumb_up-black-48dp/2x/baseline_thumb_up_black_48dp.png");
+  
 }
 
 .amber {
     background-color: orange;
+    background-position: left, right;
+    background-repeat: no-repeat, no-repeat;  
+    background-image: url("images/info-black-48dp/2x/baseline_info_black_48dp.png"),
+    url("images/thumbs_up_down-black-48dp/2x/baseline_thumbs_up_down_black_48dp.png");
 }
 
 .red {
     background-color: red;
+    background-position: left, right;
+    background-repeat: no-repeat, no-repeat;  
+    background-image: url("images/info-black-48dp/2x/baseline_info_black_48dp.png"),
+    url("images/thumb_down-black-48dp/2x/baseline_thumb_down_black_48dp.png");
 }
 
-button {
-    background-color:black;
-    border: none;
-    color: white;
-    padding: 70px 40px;
-    margin: 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 32px;
-    width: 45%;
-    
-  }
 
   .statusBox {
       font-size:32px;
@@ -113,4 +124,26 @@ button {
     width: 0%;
     border: none;
     background-color: #ddd;
+  }
+
+  .whoAreYouContent
+  {
+    background-image: url("images/account_box-black-48dp/2x/baseline_account_box_black_48dp.png");
+    background-repeat: no-repeat;
+    background-position: 0%;
+    padding: 60px;
+    padding-left: 150px;
+    font-size:32px;
+
+  }
+
+  .ConfirmationContent
+  {
+    background-image: url("images/check_circle-black-48dp/2x/baseline_check_circle_black_48dp.png");
+    background-repeat: no-repeat;
+    background-position: 0%;
+    padding: 60px;
+    padding-left: 150px;
+    font-size:32px;
+
   }
